[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/TetraForce.tres" type="Theme" id=1]
[ext_resource path="res://ui/esc_menu.gd" type="Script" id=2]
[ext_resource path="res://ui/options/options.tscn" type="PackedScene" id=3]

[node name="esc_menu" type="Popup"]
anchor_left = 0.016
anchor_top = 0.035
anchor_right = 0.98
anchor_bottom = 0.972
margin_left = -0.0960002
margin_top = -0.04
margin_right = 0.119995
margin_bottom = 0.0319977
mouse_filter = 2
theme = ExtResource( 1 )
popup_exclusive = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="Panel" parent="."]
margin_left = 72.676
margin_top = 17.0303
margin_right = 181.676
margin_bottom = 107.03

[node name="resume_btn" type="Button" parent="."]
margin_left = 100.863
margin_top = 80.1041
margin_right = 150.863
margin_bottom = 101.264
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit_game_btn" type="Button" parent="."]
margin_left = 96.9144
margin_top = 21.5477
margin_right = 159.069
margin_bottom = 42.7071
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Quit Game"

[node name="options_btn" type="Button" parent="."]
margin_left = 100.863
margin_top = 60.0901
margin_right = 151.018
margin_bottom = 81.2495
size_flags_horizontal = 2
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="goto_lobby_btn" type="Button" parent="."]
margin_left = 77.5927
margin_top = 41.212
margin_right = 177.593
margin_bottom = 62.3714
size_flags_horizontal = 2
disabled = true
text = "Return to Lobby"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="options" parent="." instance=ExtResource( 3 )]
visible = false
[connection signal="pressed" from="resume_btn" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="quit_game_btn" to="." method="_on_quit_game_pressed"]
[connection signal="pressed" from="options_btn" to="." method="_on_options_pressed"]
[connection signal="pressed" from="goto_lobby_btn" to="." method="_on_goto_lobby_pressed"]
